--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,10 @@
     "types": [
       "@cloudflare/workers-types/2023-07-01"
     ],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx"
   },
