--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,25 +3,11 @@ compatibility_flags = ["nodejs_compat_v2"]
 main = "src/index.ts"
 name = "hono-durable-websocket-exp"
 
-# [vars]
-# MY_VAR = "my-variable"
+[[migrations]]
+new_classes = ["WebsocketDurableObject"]
+tag = "v1"
 
-# [[kv_namespaces]]
-# binding = "MY_KV_NAMESPACE"
-# id = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-
-# [[r2_buckets]]
-# binding = "MY_BUCKET"
-# bucket_name = "my-bucket"
-
-# [[d1_databases]]
-# binding = "DB"
-# database_name = "my-database"
-# database_id = ""
-
-# [ai]
-# binding = "AI"
-
-# [observability]
-# enabled = true
-# head_sampling_rate = 1
+[durable_objects]
+bindings = [
+  {name = "DO_WEBSOCKET", class_name = "WebsocketDurableObject"},
+]
